# buildline

./: .gitattributes  .gitignore  CATEGORIES.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: merge_demo.rs
src/: appender.rs  chrome_trace.rs  lane.rs  lib.rs  session.rs  span.rs
src/adapters/: cargo.rs  mod.rs  ninja.rs
tests/: golden_cargo.rs  golden_chrome_trace.rs  golden_ninja.rs
tests/common/: mod.rs
tests/fixtures/cargo/: simple.cargo-timing.html  simple.expected.json
tests/fixtures/chrome_trace/: ninja_simple.expected.json
tests/fixtures/ninja/: simple.expected.json  simple.ninja_log
